feat: add initial home screen setup (get folders and assets)

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,10 @@ android.useAndroidX=true
 
 #Kotlin Multiplatform
 kotlin.mpp.enableCInteropCommonization=true
+
+BASE_URL=https://api.canva.com/rest/v1/
+AUTH_URL=https://www.canva.com/api/oauth/authorize
+REDIRECT_URL=https://inspired.samadtch.com
+SCOPES=folder:read folder:write asset:read asset:write profile:read comment:read comment:write
+CLIENT_ID=OC-AZEh2lMho59_
+CLIENT_SECRET=cnvcatJZTB4N28RDC1w-3W2bRf2vzONV9KzuX_5IyrhYlr8Ea4e472e4
