feat: setup oauth functionality

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ android-targetSdk = "34"
 androidx-activityCompose = "1.9.1"
 androidx-espresso-core = "3.6.1"
 androidx-lifecycle = "2.8.0"
+lifecycleRuntimeKtx = "2.8.4"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.1"
 compose-plugin = "1.6.11"
@@ -25,6 +26,9 @@ precompose = "1.6.0-rc02"
 hilt = "2.51"
 hilt-tools = "1.2.0"
 palette = "1.0.0"
+auth = "0.11.1"
+security = "1.1.0-alpha06"
+browser = "1.8.0"
 
 [libraries]
 buildKonfig = { module = "com.codingfeline.buildkonfig:buildkonfig-gradle-plugin", version.ref = "buildConfig" }
@@ -39,10 +43,13 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 # Android
 androidx-material = { group = "com.google.android.material", name = "material", version.ref = "androidx-material" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
+androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-lifecycle-viewmodel = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtime-compose = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 androidx-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen" }
 androidx-palette = { group = "androidx.palette", name = "palette", version.ref = "palette" }
+androidx-security = { module = "androidx.security:security-crypto", version.ref = "security" }
+androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "browser" }
 
 # Pre-Compose
 precompose-core = { module = "moe.tlaster:precompose", version.ref = "precompose" }
@@ -76,6 +83,7 @@ koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "datetime-ktx" }
 datastore = { module = "androidx.datastore:datastore-preferences-core", version.ref = "datastore" }
 review-ktx = { module = "com.google.android.play:review-ktx", version.ref = "review" }
+auth-openid = { module = "net.openid:appauth", version.ref = "auth" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
