fix: fix redirect url to avoid conflict between oauth url and other urls

--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -32,6 +32,7 @@
 
                 <data
                     android:host="inspired.samadtch.com"
+                    android:pathPrefix="/oauth_redirect"
                     android:scheme="https" />
             </intent-filter>
         </activity>
